--- a/scss/componentes/_contacto.scss
+++ b/scss/componentes/_contacto.scss
@@ -42,8 +42,13 @@
             }
 
             .btn{
-                width: 120px;
-                margin-top: 10px;
+                width: 150px;
+                margin-top: 20px;
+                background: #3e015a;
+                color: #fff;
+                font-size: 14px;
+                padding: 8px 26px;
+                border-radius: 30px;
             }
 
             #message{
