--- a/scss/componentes/_nav.scss
+++ b/scss/componentes/_nav.scss
@@ -6,6 +6,10 @@ body::-webkit-scrollbar:vertical {
     display: flex;
     align-items: center;
 
+    .mobile-nav {
+        display: none;
+    }
+
     .img_logo {
         width: 140px;
         margin-left: 160px;
@@ -39,6 +43,44 @@ body::-webkit-scrollbar:vertical {
         }
     }
 
+    .nav_hamburguesa{
+        display: none;
+        margin-top: 67px;
+        color: #fff;
+        position: absolute;
+        width: 50%;
+        height: 790px;
+        top: 0;
+        right: 1;
+
+        ul {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: max-content;
+            background: #520079;
+
+            li {
+                height: 60px;
+                width: 98%;
+                margin-bottom: 5px;
+                background-color: #1d1d1d;
+                color: #fff;
+                display: flex;
+
+
+                a {
+                    width: 100%;
+                    color: #fff;
+                    display: flex;
+                    font-size: 16px;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+        }
+    }
 
     .carrito_cont {
         display: flex;
@@ -58,6 +100,25 @@ body::-webkit-scrollbar:vertical {
             width: 48px;
         }
 
+    }
+
+    .carrito_cont2x {
+        display: none;
+        align-items: center;
+        margin-left: 20px;
+        margin-right: 100px;
+
+        .numCar-total {
+            color: #fff;
+            font-size: 12px;
+            background-color: #3f3f3f;
+            padding: 7px;
+            border-radius: 100%;
+        }
+
+        .img_shop2 {
+            width: 48px;
+        }
     }
 
     .carrito-overlay {
@@ -198,9 +259,10 @@ body::-webkit-scrollbar:vertical {
 
             }
 
-            .totales-cPopUp{
+            .totales-cPopUp {
                 height: 24%;
-                .tCPopUp{
+
+                .tCPopUp {
                     background-color: #eeeeee;
                     height: 30%;
                     display: flex;
@@ -208,18 +270,18 @@ body::-webkit-scrollbar:vertical {
                     align-items: center;
                     padding: 0 80px;
 
-                    .tCPopUp-total{
+                    .tCPopUp-total {
                         font-size: 22px;
                         font-weight: 200;
                     }
 
-                    .tCPopUp-precio{
+                    .tCPopUp-precio {
                         font-size: 25px;
                         font-weight: 500;
                     }
                 }
 
-                .btnTotal{
+                .btnTotal {
                     height: 70%;
                     background-color: #b1b1b1;
                     display: flex;
@@ -227,7 +289,7 @@ body::-webkit-scrollbar:vertical {
                     align-items: center;
                     gap: 30px;
 
-                    .btnTotal-01{
+                    .btnTotal-01 {
                         width: 40%;
                         height: 38px;
                         background: #3e015a;
@@ -240,8 +302,8 @@ body::-webkit-scrollbar:vertical {
                         align-items: center;
                     }
 
-                    
-                    .btnTotal-02{
+
+                    .btnTotal-02 {
                         width: 40%;
                         height: 38px;
                         background: #3e015a;
