--- a/scss/componentes/_nav2.scss
+++ b/scss/componentes/_nav2.scss
@@ -12,9 +12,24 @@
     background-color: #131313;
     padding: 25px 0;
 
+
+    .mobile-nav{
+        display: none;
+        #ic-han{
+            display: none;
+        }
+        #ic-han2{
+            display: none;
+        }
+    }
+    .nav_hamburguesa {
+        display: none;
+    }
+
+
     .link_img_logo {
         width: 150px;
-        margin-left: 120px;
+        padding-left: 13%;
 
         .img_logo {
             width: 150px;
@@ -43,6 +58,46 @@
                     color: #ffffff;
                     font-size: 17px;
                     font-weight: 400;
+                }
+            }
+        }
+    }
+
+    .nav_hamburguesa{
+        display: none;
+        margin-top: 70px;
+        color: #fff;
+        position: absolute;
+        width: 50%;
+        height: 790px;
+        top: 0;
+        right: 1;
+
+        ul {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: max-content;
+            background: #520079;
+            gap: 0px;
+
+            li {
+                height: 60px;
+                width: 98%;
+                margin-bottom: 5px;
+                background-color: #1d1d1d;
+                color: #fff;
+                display: flex;
+
+
+                a {
+                    width: 100%;
+                    color: #fff;
+                    display: flex;
+                    font-size: 16px;
+                    align-items: center;
+                    justify-content: center;
                 }
             }
         }
