--- a/css/main.css
+++ b/css/main.css
@@ -1110,35 +1110,11 @@ footer {
     width: 130px; }
   .main_index .section_mas_vendido .sect_mv_cont .sect_mv_01 p {
     margin-bottom: 19px; }
-  .main_index .section_mas_vendido .sect_mv_cont .sect_mv_02 img {
-    width: 130px; }
-  .main_index .section_mas_vendido .sect_mv_cont .sect_mv_02 p {
-    margin-bottom: 19px; }
-  .main_index .section_mas_vendido .sect_mv_cont .sect_mv_03 img {
-    width: 130px; }
-  .main_index .section_mas_vendido .sect_mv_cont .sect_mv_03 p {
-    margin-bottom: 19px; }
-  .main_index .section_mas_vendido .sect_mv_cont .sect_mv_04 img {
-    width: 130px; }
-  .main_index .section_mas_vendido .sect_mv_cont .sect_mv_04 p {
-    margin-bottom: 19px; }
   .main_index .section_nuevos_productos h3 {
     font-size: 23px; }
   .main_index .section_nuevos_productos .sect_np_cont .sect_np_01 img {
     width: 130px; }
   .main_index .section_nuevos_productos .sect_np_cont .sect_np_01 p {
-    margin-bottom: 19px; }
-  .main_index .section_nuevos_productos .sect_np_cont .sect_np_02 img {
-    width: 130px; }
-  .main_index .section_nuevos_productos .sect_np_cont .sect_np_02 p {
-    margin-bottom: 19px; }
-  .main_index .section_nuevos_productos .sect_np_cont .sect_np_03 img {
-    width: 130px; }
-  .main_index .section_nuevos_productos .sect_np_cont .sect_np_03 p {
-    margin-bottom: 19px; }
-  .main_index .section_nuevos_productos .sect_np_cont .sect_np_04 img {
-    width: 130px; }
-  .main_index .section_nuevos_productos .sect_np_cont .sect_np_04 p {
     margin-bottom: 19px; }
   .cont-productos main .btn {
     font-size: 12px;
@@ -1229,6 +1205,366 @@ footer {
         margin: 8px 0; }
         footer .footer_cont .footer_cont-3 .footer-cont-3p2 li a {
           font-size: 13px;
+          font-weight: 300;
+          color: #fff;
+          margin: 15px 0; } }
+
+@media (max-width: 768px) {
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    height: 70px;
+    padding: 0px;
+    background-color: #131313; }
+    .navbar .check-btn img {
+      display: block;
+      width: 45px; }
+    .navbar .mobile-nav {
+      display: block;
+      cursor: pointer; }
+      .navbar .mobile-nav i img {
+        width: 45px;
+        margin-left: 40px; }
+      .navbar .mobile-nav #ic-han2 {
+        display: none; }
+    .navbar .link_img_logo .img_logo {
+      width: 130px;
+      margin: 0; }
+    .navbar nav {
+      height: 50px;
+      display: flex;
+      flex: none;
+      justify-content: none; }
+      .navbar nav ul {
+        display: none; }
+  .nav_and_header {
+    height: 500px; }
+  header {
+    height: 400px; }
+    header .header-text {
+      display: grid;
+      justify-content: center;
+      align-items: center;
+      justify-items: center; }
+      header .header-text .header-text_cont {
+        margin: 0;
+        font-size: 13px; }
+        header .header-text .header-text_cont h1 {
+          font-size: 20px;
+          font-weight: 900; }
+  .header-img img {
+    margin-right: 50px;
+    width: 260px; }
+  .main_index .btn {
+    font-size: 11px;
+    padding: 8px 20px;
+    border-radius: 30px; }
+  .main_index .section_img {
+    height: 300px; }
+    .main_index .section_img .section_img-01 img {
+      width: 120px;
+      height: 200px; }
+    .main_index .section_img .section_img-02 img {
+      width: 120px;
+      height: 200px; }
+    .main_index .section_img .section_img-03 img {
+      width: 120px;
+      height: 200px; }
+  .main_index .section_mas_vendido h3 {
+    font-size: 23px;
+    margin: 50px 0 50px 0; }
+  .main_index .section_mas_vendido .sect_mv_cont {
+    width: 70%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    justify-items: center;
+    grid-row-gap: 20px;
+    margin: 0px;
+    gap: 0px; }
+    .main_index .section_mas_vendido .sect_mv_cont .sect_mv_01 {
+      width: max-content;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-right: 0px;
+      margin-left: 0px;
+      padding: 0px;
+      gap: 0; }
+      .main_index .section_mas_vendido .sect_mv_cont .sect_mv_01 img {
+        width: 130px; }
+      .main_index .section_mas_vendido .sect_mv_cont .sect_mv_01 p {
+        margin-bottom: 19px; }
+  .main_index .section_nuevos_productos h3 {
+    font-size: 23px;
+    margin: 100px 0 50px 0; }
+  .main_index .section_nuevos_productos .sect_np_cont {
+    width: 70%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    justify-items: center;
+    grid-row-gap: 20px;
+    margin: 0px;
+    gap: 0px; }
+    .main_index .section_nuevos_productos .sect_np_cont .sect_np_01 {
+      width: max-content;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0px;
+      padding: 0px;
+      gap: 0; }
+      .main_index .section_nuevos_productos .sect_np_cont .sect_np_01 img {
+        width: 130px; }
+      .main_index .section_nuevos_productos .sect_np_cont .sect_np_01 p {
+        margin-bottom: 19px; } }
+
+@media (max-width: 550px) {
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    padding: 0px;
+    background-color: #131313; }
+    .navbar .mobile-nav {
+      display: block;
+      cursor: pointer; }
+      .navbar .mobile-nav i img {
+        width: 30px;
+        margin-left: 25px; }
+      .navbar .mobile-nav #ic-han2 {
+        display: none; }
+    .navbar .link_img_logo {
+      margin-left: 14%; }
+      .navbar .link_img_logo .img_logo {
+        width: 100px;
+        margin: 0; }
+    .navbar .carrito_cont2x {
+      display: flex;
+      align-items: center;
+      margin-left: 0px;
+      margin-right: 25px; }
+      .navbar .carrito_cont2x .numCar-total {
+        color: #fff;
+        font-size: 7px;
+        background-color: #3f3f3f;
+        padding: 7px;
+        border-radius: 100%; }
+      .navbar .carrito_cont2x .img_shop2 {
+        width: 28px; }
+    .navbar .nav_hamburguesa {
+      display: none;
+      margin-top: 50px;
+      color: #fff;
+      position: absolute;
+      width: 50%;
+      height: 790px;
+      top: 0;
+      right: 1; }
+      .navbar .nav_hamburguesa ul {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: max-content;
+        background: #520079; }
+        .navbar .nav_hamburguesa ul li {
+          height: 60px;
+          width: 98%;
+          margin-bottom: 5px;
+          background-color: #181818;
+          color: #fff;
+          display: flex; }
+          .navbar .nav_hamburguesa ul li a {
+            width: 100%;
+            color: #fff;
+            display: flex;
+            font-size: 14px;
+            align-items: center;
+            justify-content: center; }
+    .navbar .carrito-overlay .popup {
+      width: 100%; }
+      .navbar .carrito-overlay .popup .close-cont {
+        width: 100%;
+        height: 4.5%; }
+      .navbar .carrito-overlay .popup .cont-pop-carrito .titulo-p-carrito {
+        margin-top: 40px;
+        margin-left: 20px;
+        font-size: 14px; }
+      .navbar .carrito-overlay .popup .cont-pop-carrito .pop-cont2 {
+        display: flex;
+        align-items: center; }
+        .navbar .carrito-overlay .popup .cont-pop-carrito .pop-cont2 .producto-img {
+          margin-left: 20px;
+          width: 110px; }
+      .navbar .carrito-overlay .popup .cont-pop-carrito .cont-popNum {
+        margin: 0 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-weight: 300;
+        gap: 20px; }
+        .navbar .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad {
+          border: 1px solid #d1d1d19c;
+          display: flex;
+          align-items: center;
+          border-radius: 5px; }
+          .navbar .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .menos {
+            padding: 5px 10px;
+            background-color: #cecece; }
+          .navbar .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .popCantidad {
+            padding: 5px 10px; }
+          .navbar .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .mas {
+            padding: 5px 10px;
+            background-color: #cecece; }
+      .navbar .carrito-overlay .popup .cont-pop-carrito .precio-el-cont {
+        margin-left: 5px; }
+        .navbar .carrito-overlay .popup .cont-pop-carrito .precio-el-cont .popPrecio {
+          font-size: 20px; }
+        .navbar .carrito-overlay .popup .cont-pop-carrito .precio-el-cont .eliminar {
+          width: 20px;
+          background: #3e015a;
+          color: #fff;
+          font-size: 12px;
+          padding: 7px 28px;
+          border-radius: 40px; }
+      .navbar .carrito-overlay .popup .totales-cPopUp {
+        height: 24%; }
+        .navbar .carrito-overlay .popup .totales-cPopUp .tCPopUp .tCPopUp-total {
+          font-size: 20px; }
+        .navbar .carrito-overlay .popup .totales-cPopUp .tCPopUp .tCPopUp-precio {
+          font-size: 23px; }
+        .navbar .carrito-overlay .popup .totales-cPopUp .btnTotal {
+          height: 70%; }
+          .navbar .carrito-overlay .popup .totales-cPopUp .btnTotal .btnTotal-01 {
+            width: 35%;
+            font-size: 14px; }
+          .navbar .carrito-overlay .popup .totales-cPopUp .btnTotal .btnTotal-02 {
+            width: 35%;
+            font-size: 14px; }
+  .nav_and_header {
+    height: 350px; }
+  header {
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+    grid-template-columns: none;
+    height: 300px; }
+    header .header-text {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-items: center;
+      justify-content: center; }
+      header .header-text .header-text_cont .btn-conoce {
+        width: 68px;
+        background: #3e015a;
+        color: #fff;
+        font-size: 11px;
+        padding: 8px 15px;
+        border: 0px;
+        border-radius: 30px; }
+      header .header-text .header-text_cont h1 {
+        font-size: 18px;
+        font-weight: 900; }
+  .header-img img {
+    display: none;
+    margin-right: 50px;
+    width: 300px; }
+  .main_index .btn {
+    font-size: 10px;
+    padding: 7px 18px;
+    border-radius: 30px; }
+  .main_index .section_img {
+    height: 250px; }
+    .main_index .section_img .section_img-01 img {
+      width: 80px;
+      height: 160px; }
+    .main_index .section_img .section_img-02 img {
+      width: 80px;
+      height: 160px; }
+    .main_index .section_img .section_img-03 img {
+      width: 80px;
+      height: 160px; }
+  .main_index .section_mas_vendido h3 {
+    font-size: 20px;
+    margin: 50px 0 30px 0; }
+  .main_index .section_mas_vendido .sect_mv_cont {
+    width: 70%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    justify-items: center;
+    grid-row-gap: 20px;
+    margin: 0px;
+    gap: 0px; }
+    .main_index .section_mas_vendido .sect_mv_cont .sect_mv_01 {
+      width: max-content;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-right: 0px;
+      margin-left: 0px;
+      padding: 0px;
+      gap: 0; }
+      .main_index .section_mas_vendido .sect_mv_cont .sect_mv_01 img {
+        width: 100px; }
+      .main_index .section_mas_vendido .sect_mv_cont .sect_mv_01 p {
+        margin-bottom: 19px; }
+  .main_index .section_nuevos_productos {
+    margin-bottom: 0; }
+    .main_index .section_nuevos_productos h3 {
+      font-size: 20px;
+      margin: 70px 0 20px 0; }
+    .main_index .section_nuevos_productos .sect_np_cont {
+      width: 70%;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      justify-content: center;
+      justify-items: center;
+      grid-row-gap: 20px;
+      margin: 0px;
+      gap: 0px; }
+      .main_index .section_nuevos_productos .sect_np_cont .sect_np_01 {
+        width: max-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0px;
+        padding: 0px;
+        gap: 0; }
+        .main_index .section_nuevos_productos .sect_np_cont .sect_np_01 img {
+          width: 100px; }
+        .main_index .section_nuevos_productos .sect_np_cont .sect_np_01 p {
+          margin-bottom: 19px; }
+  footer {
+    height: 220px; }
+    footer .footer_cont .footer_cont-1 {
+      font-size: 14px; }
+      footer .footer_cont .footer_cont-1 .footer_cont-sn {
+        margin-top: 20px;
+        gap: 10px; }
+        footer .footer_cont .footer_cont-1 .footer_cont-sn img {
+          width: 15px; }
+    footer .footer_cont .footer_cont-2 .footer_cont-2t img {
+      width: 80px;
+      margin-bottom: 15px; }
+    footer .footer_cont .footer_cont-2 .footer_cont-2t p {
+      font-size: 8px; }
+    footer .footer_cont .footer_cont-3 {
+      gap: 100px; }
+      footer .footer_cont .footer_cont-3 .footer-cont-3p1 {
+        display: none; }
+      footer .footer_cont .footer_cont-3 .footer-cont-3p2 h4 {
+        font-size: 11px;
+        margin-bottom: 4px; }
+      footer .footer_cont .footer_cont-3 .footer-cont-3p2 li {
+        margin: 1px 0; }
+        footer .footer_cont .footer_cont-3 .footer-cont-3p2 li a {
+          font-size: 10px;
           font-weight: 300;
           color: #fff;
           margin: 15px 0; } }
