--- a/scss/componentes/_mediaqueries.scss
+++ b/scss/componentes/_mediaqueries.scss
@@ -113,12 +113,13 @@
         .mobile-nav {
             display: block;
             cursor: pointer;
-            i img{
+
+            i img {
                 width: 45px;
                 margin-left: 40px;
             }
 
-            #ic-han2{
+            #ic-han2 {
                 display: none;
             }
         }
@@ -126,6 +127,7 @@
 
         .link_img_logo {
             margin-left: 20%;
+
             .img_logo {
                 width: 130px;
                 margin: 0;
@@ -244,21 +246,24 @@
         .mobile-nav {
             display: block;
             cursor: pointer;
-            i img{
+
+            i img {
                 width: 45px;
                 margin-left: 40px;
             }
-            #ic-han{
+
+            #ic-han {
                 display: block;
             }
 
-            #ic-han2{
+            #ic-han2 {
                 display: none;
             }
         }
 
         .link_img_logo {
             margin-left: 10%;
+
             .img_logo {
                 width: 130px;
                 margin: 0;
@@ -438,36 +443,6 @@
                         margin-bottom: 19px;
                     }
                 }
-
-                .sect_mv_02 {
-                    img {
-                        width: 130px;
-                    }
-
-                    p {
-                        margin-bottom: 19px;
-                    }
-                }
-
-                .sect_mv_03 {
-                    img {
-                        width: 130px;
-                    }
-
-                    p {
-                        margin-bottom: 19px;
-                    }
-                }
-
-                .sect_mv_04 {
-                    img {
-                        width: 130px;
-                    }
-
-                    p {
-                        margin-bottom: 19px;
-                    }
-                }
             }
         }
 
@@ -480,36 +455,6 @@
 
             .sect_np_cont {
                 .sect_np_01 {
-                    img {
-                        width: 130px;
-                    }
-
-                    p {
-                        margin-bottom: 19px;
-                    }
-                }
-
-                .sect_np_02 {
-                    img {
-                        width: 130px;
-                    }
-
-                    p {
-                        margin-bottom: 19px;
-                    }
-                }
-
-                .sect_np_03 {
-                    img {
-                        width: 130px;
-                    }
-
-                    p {
-                        margin-bottom: 19px;
-                    }
-                }
-
-                .sect_np_04 {
                     img {
                         width: 130px;
                     }
@@ -701,4 +646,649 @@
             }
         }
     }
+}
+
+//******************************************************************************//
+//----- 768px -----//
+@media (max-width:768px) {
+
+    //---- NAV ----//
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        height: 70px;
+        padding: 0px;
+        background-color: #131313;
+
+        .check-btn img {
+            display: block;
+            width: 45px;
+        }
+
+        .mobile-nav {
+            display: block;
+            cursor: pointer;
+
+            i img {
+                width: 45px;
+                margin-left: 40px;
+            }
+
+            #ic-han2 {
+                display: none;
+            }
+        }
+
+
+        .link_img_logo {
+            .img_logo {
+                width: 130px;
+                margin: 0;
+            }
+        }
+
+        nav {
+
+            height: 50px;
+            display: flex;
+            flex: none;
+            justify-content: none;
+
+            ul {
+                display: none;
+            }
+        }
+    }
+
+    //----- INDEX -----//
+    //---- Header ----//
+    .nav_and_header {
+        height: 500px;
+    }
+
+    header {
+        height: 400px;
+
+        .header-text {
+            display: grid;
+            justify-content: center;
+            align-items: center;
+            justify-items: center;
+
+            .header-text_cont {
+                margin: 0;
+                font-size: 13px;
+
+                h1 {
+                    font-size: 20px;
+                    font-weight: 900;
+                }
+            }
+        }
+    }
+
+    .header-img {
+        img {
+            margin-right: 50px;
+            width: 260px;
+        }
+    }
+
+    //---- Main ----//
+    //**** MAIN ****//
+    .main_index {
+        .btn {
+            font-size: 11px;
+            padding: 8px 20px;
+            border-radius: 30px;
+        }
+
+        //---- Seccion Imagenes ----//
+        .section_img {
+            height: 300px;
+
+            .section_img-01 {
+                img {
+                    width: 120px;
+                    height: 200px;
+                }
+            }
+
+            .section_img-02 {
+                img {
+                    width: 120px;
+                    height: 200px;
+                }
+            }
+
+            .section_img-03 {
+                img {
+                    width: 120px;
+                    height: 200px;
+                }
+            }
+        }
+
+        //---- Seccion Mas Vendido ----//
+        .section_mas_vendido {
+
+            h3 {
+                font-size: 23px;
+                margin: 50px 0 50px 0;
+            }
+
+            .sect_mv_cont {
+                width: 70%;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                justify-content: center;
+                justify-items: center;
+                grid-row-gap: 20px;
+                margin: 0px;
+                gap: 0px;
+
+
+
+                .sect_mv_01 {
+                    width: max-content;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    margin-right: 0px;
+                    margin-left: 0px;
+                    padding: 0px;
+                    gap: 0;
+
+
+                    img {
+                        width: 130px;
+                    }
+
+                    p {
+                        margin-bottom: 19px;
+                    }
+                }
+
+            }
+        }
+
+
+        //---- Seccion Nuevos Productos ----//
+        .section_nuevos_productos {
+            h3 {
+                font-size: 23px;
+                margin: 100px 0 50px 0;
+            }
+
+            .sect_np_cont {
+                width: 70%;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                justify-content: center;
+                justify-items: center;
+                grid-row-gap: 20px;
+                margin: 0px;
+                gap: 0px;
+
+                .sect_np_01 {
+                    width: max-content;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    margin: 0px;
+                    padding: 0px;
+                    gap: 0;
+
+                    img {
+                        width: 130px;
+                    }
+
+                    p {
+                        margin-bottom: 19px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+//******************************************************************************//
+//----- 550px -----//
+@media (max-width:550px) {
+
+    //---- NAV ----//
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        height: 50px;
+        padding: 0px;
+        background-color: #131313;
+
+        //Icono menu Hamburguesa
+        .mobile-nav {
+            display: block;
+            cursor: pointer;
+
+            i img {
+                width: 30px;
+                margin-left: 25px;
+            }
+
+            #ic-han2 {
+                display: none;
+            }
+        }
+
+        //Logo Sitio Web
+        .link_img_logo {
+            margin-left: 14%;
+
+            .img_logo {
+                width: 100px;
+                margin: 0;
+            }
+        }
+
+        //Carrito con numeros
+        .carrito_cont2x {
+            display: flex;
+            align-items: center;
+            margin-left: 0px;
+            margin-right: 25px;
+
+            .numCar-total {
+                color: #fff;
+                font-size: 7px;
+                background-color: #3f3f3f;
+                padding: 7px;
+                border-radius: 100%;
+            }
+
+            .img_shop2 {
+                width: 28px;
+            }
+        }
+
+        .nav_hamburguesa {
+            display: none;
+            margin-top: 50px;
+            color: #fff;
+            position: absolute;
+            width: 50%;
+            height: 790px;
+            top: 0;
+            right: 1;
+
+            ul {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                height: max-content;
+                background: #520079;
+
+                li {
+                    height: 60px;
+                    width: 98%;
+                    margin-bottom: 5px;
+                    background-color: #181818;
+                    color: #fff;
+                    display: flex;
+
+
+                    a {
+                        width: 100%;
+                        color: #fff;
+                        display: flex;
+                        font-size: 14px;
+                        align-items: center;
+                        justify-content: center;
+                    }
+                }
+            }
+        }
+
+        //Pop-Up
+        .carrito-overlay {
+            .popup {
+                width: 100%;
+
+                .close-cont {
+                    width: 100%;
+                    height: 4.5%;
+                }
+
+                .cont-pop-carrito {
+
+                    .titulo-p-carrito {
+                        margin-top: 40px;
+                        margin-left: 20px;
+                        font-size: 14px;
+                    }
+
+                    .pop-cont2 {
+                        display: flex;
+                        align-items: center;
+
+                        .producto-img {
+                            margin-left: 20px;
+                            width: 110px;
+                        }
+                    }
+
+
+                    .cont-popNum {
+                        margin: 0 30px;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        font-weight: 300;
+                        gap: 20px;
+
+
+                        .cont-popCantidad {
+                            border: 1px solid #d1d1d19c;
+                            display: flex;
+                            align-items: center;
+                            border-radius: 5px;
+
+                            .menos {
+                                padding: 5px 10px;
+                                background-color: #cecece;
+                            }
+
+                            .popCantidad {
+                                padding: 5px 10px;
+                            }
+
+                            .mas {
+                                padding: 5px 10px;
+                                background-color: #cecece;
+                            }
+                        }
+                    }
+
+                    .precio-el-cont {
+                        margin-left: 5px;
+
+                        .popPrecio {
+                            font-size: 20px;
+                        }
+
+
+                        .eliminar {
+                            width: 20px;
+                            background: #3e015a;
+                            color: #fff;
+                            font-size: 12px;
+                            padding: 7px 28px;
+                            border-radius: 40px;
+                        }
+                    }
+                }
+
+                .totales-cPopUp {
+                    height: 24%;
+
+                    .tCPopUp {
+                        .tCPopUp-total {
+                            font-size: 20px;
+                        }
+
+                        .tCPopUp-precio {
+                            font-size: 23px;
+                        }
+                    }
+
+                    .btnTotal {
+                        height: 70%;
+
+                        .btnTotal-01 {
+                            width: 35%;
+                            font-size: 14px;
+                        }
+
+                        .btnTotal-02 {
+                            width: 35%;
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
+        }
+
+    }
+
+
+
+    //----- INDEX -----//
+    //---- Header ----//
+    .nav_and_header {
+        height: 350px;
+    }
+
+    header {
+        display: flex;
+        align-items: center;
+        justify-items: center;
+        justify-content: center;
+        grid-template-columns: none;
+        height: 300px;
+
+        .header-text {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-items: center;
+            justify-content: center;
+
+            .header-text_cont {
+                .btn-conoce {
+                    width: 68px;
+                    background: #3e015a;
+                    color: #fff;
+                    font-size: 11px;
+                    padding: 8px 15px;
+                    border: 0px;
+                    border-radius: 30px;
+                }
+
+                h1 {
+                    font-size: 18px;
+                    font-weight: 900;
+                }
+            }
+        }
+    }
+
+    .header-img {
+        img {
+            display: none;
+            margin-right: 50px;
+            width: 300px;
+        }
+    }
+
+
+    //---- Main ----//
+    //**** MAIN ****//
+    .main_index {
+        .btn {
+            font-size: 10px;
+            padding: 7px 18px;
+            border-radius: 30px;
+        }
+
+        //---- Seccion Imagenes ----//
+        .section_img {
+            height: 250px;
+
+            .section_img-01 {
+                img {
+                    width: 80px;
+                    height: 160px;
+                }
+            }
+
+            .section_img-02 {
+                img {
+                    width: 80px;
+                    height: 160px;
+                }
+            }
+
+            .section_img-03 {
+                img {
+                    width: 80px;
+                    height: 160px;
+                }
+            }
+        }
+
+        //---- Seccion Mas Vendido ----//
+        .section_mas_vendido {
+
+            h3 {
+                font-size: 20px;
+                margin: 50px 0 30px 0;
+            }
+
+            .sect_mv_cont {
+                width: 70%;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                justify-content: center;
+                justify-items: center;
+                grid-row-gap: 20px;
+                margin: 0px;
+                gap: 0px;
+
+
+
+                .sect_mv_01 {
+                    width: max-content;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    margin-right: 0px;
+                    margin-left: 0px;
+                    padding: 0px;
+                    gap: 0;
+
+
+                    img {
+                        width: 100px;
+                    }
+
+                    p {
+                        margin-bottom: 19px;
+                    }
+                }
+
+            }
+        }
+
+
+        //---- Seccion Nuevos Productos ----//
+        .section_nuevos_productos {
+            margin-bottom: 0;
+
+            h3 {
+                font-size: 20px;
+                margin: 70px 0 20px 0;
+            }
+
+            .sect_np_cont {
+                width: 70%;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                justify-content: center;
+                justify-items: center;
+                grid-row-gap: 20px;
+                margin: 0px;
+                gap: 0px;
+
+                .sect_np_01 {
+                    width: max-content;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    margin: 0px;
+                    padding: 0px;
+                    gap: 0;
+
+                    img {
+                        width: 100px;
+                    }
+
+                    p {
+                        margin-bottom: 19px;
+                    }
+                }
+            }
+        }
+    }
+
+
+    //---- FOOTER ----//
+    footer {
+        height: 220px;
+
+        .footer_cont {
+            .footer_cont-1 {
+                font-size: 14px;
+
+                .footer_cont-sn {
+                    margin-top: 20px;
+                    gap: 10px;
+
+
+                    img {
+                        width: 15px;
+                    }
+                }
+            }
+
+            .footer_cont-2 {
+                .footer_cont-2t {
+                    img {
+                        width: 80px;
+                        margin-bottom: 15px;
+                    }
+
+                    p {
+                        font-size: 8px;
+                    }
+                }
+            }
+
+            .footer_cont-3 {
+                gap: 100px;
+
+                .footer-cont-3p1 {
+                    display: none;
+                }
+
+                .footer-cont-3p2 {
+                    h4 {
+                        font-size: 11px;
+                        margin-bottom: 4px;
+                    }
+
+                    li {
+                        margin: 1px 0;
+
+                        a {
+                            font-size: 10px;
+                            font-weight: 300;
+                            color: #fff;
+                            margin: 15px 0;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
 }
